--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinephile Monk</title>
-    <meta http-equiv="refresh" content="5;url=https://www.amazon.com/your-book-link">
+    <meta http-equiv="refresh" content="5;url=https://brotherelias.substack.com">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
     <div class="container">
         <h1>Brother Elias</h1>
         <p>You are being redirected to the Amazon page for <em>New Book</em> by Brother Elias.</p>
-        <p>If you are not redirected in 5 seconds, <a href="https://www.amazon.com/your-book-link">click here</a>.</p>
+        <p>If you are not redirected in 5 seconds, <a href="https://brotherelias.substack.com">click here</a>.</p>
         <p>For inquiries, contact the publisher at <a href="mailto:contact@narrativeforgemedia.com">contact@narrativeforgemedia.com</a>.</p>
     </div>
 </body>
