--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <div class="container">
         <h1>Brother Elias</h1>
-        <p>You are being redirected to the Amazon page for <em>New Book</em> by Brother Elias.</p>
+        <p>You are being redirected to the Substack page for <em>The Contemplative Path</em> by Brother Elias.</p>
         <p>If you are not redirected in 5 seconds, <a href="https://brotherelias.substack.com">click here</a>.</p>
         <p>For inquiries, contact the publisher at <a href="mailto:contact@narrativeforgemedia.com">contact@narrativeforgemedia.com</a>.</p>
     </div>
